Add batch mode for missions creation and deletion
